--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,7 @@
  --blackII:#333333;
  --dark:#2D2D3D;
  --success:#159F00;
+ --pending:#00AA96;
 }
 
 body{
@@ -56,6 +57,7 @@ input{
 }
 .h7{
   font-size: 10px;
+ 
 }
 
 
@@ -132,6 +134,9 @@ input{
 .primaryDark{
   color: var(--primaryDark);
 }
+.pending{
+  color: var(--pending);
+}
 
 /* Background Color */
 
@@ -207,6 +212,11 @@ border-radius: 4px;
   border: 1px solid #F2F2F2;
 box-shadow: 3px 4px 19px rgba(118, 118, 122, 0.05);
 border-radius: 4px;
+}
+
+/* Height */
+.h{
+  height: 100%;
 }
 
 
