--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -153,7 +153,7 @@ input{
   background-color: var(--grayIII) !important;
 }
 .bg-blackI{
-  background-color: var(--blackI);
+  background-color: var(--blackI) !important;
 }
 .bg-blackII{
   background-color: var(--blackII);
