--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,7 +101,7 @@ input{
 /* Color */
 
 .danger{
-  color: var(--danger);
+  color: var(--danger) !important;
 }
 .gray{
   color: var(--gray) !important;
